# swiftlink

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
etc/swiftlink/: swiftlink.toml
swiftlink/: Cargo.toml
swiftlink-dns/: Cargo.toml
swiftlink-dns/src/: client.rs  config.rs  dns.rs  dns_client.rs  dns_conf.rs  dns_error.rs  dns_handle.rs  dns_server.rs  dns_url.rs  error.rs  lib.rs  libdns.rs  preset_ns.rs  proxy.rs  resolver.rs  rustls.rs  server.rs
swiftlink-dns/src/dns_handle/: fakedns.rs  forward.rs  mod.rs
swiftlink-infra/: Cargo.toml
swiftlink-infra/src/: auth.rs  cachefile.rs  file_mode.rs  lib.rs  listener.rs  log.rs  mapped_file.rs  parse.rs  signal.rs
swiftlink-infra/src/fakedns/: cachefile.rs  memory.rs  mod.rs
swiftlink-infra/src/net/: mod.rs  options.rs  tcp.rs  timeout_stream.rs  udp.rs
swiftlink-infra/src/net/sys/: mod.rs
swiftlink-infra/src/net/sys/unix/: mod.rs
swiftlink-infra/src/net/sys/unix/bsd/: macos.rs
swiftlink-infra/src/net/sys/unix/linux/: mod.rs
swiftlink-infra/src/trie/: domain_trie.rs  mod.rs
swiftlink-net/: Cargo.toml
swiftlink-net/src/: tcp.rs
swiftlink-net/src/sys/: mod.rs
swiftlink-net/src/sys/unix/: mod.rs
swiftlink-net/src/sys/unix/bsd/: macos.rs
swiftlink-transport/: Cargo.toml
swiftlink-transport/src/: socks4.rs
swiftlink/src/: app.rs  cli.rs  conf.rs  config.rs  context.rs  dispatcher.rs  error.rs  main.rs  route.rs  rt.rs
swiftlink/src/inbound/: association.rs  mod.rs
swiftlink/src/inbound/socks/: mod.rs  tcp.rs  udp.rs
swiftlink/src/outbound/: direct.rs  manager.rs  mod.rs  reject.rs  tls.rs  trojan.rs
