[package]
name = "swiftlink-infra"
version = "0.1.0"
edition = "2021"
authors = ["feifeigood <feifeigood91@gmail.com>"]

[dependencies]
libc = "0.2.141"
cfg-if = "1"
chrono = "0.4"
enum_dispatch = "0.3.12"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "env-filter",
] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4" }

# async/await
tokio = { version = "1.28", features = [
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "sync",
    "time",
] }
socket2 = { version = "0.5", features = ["all"] }
