[package]
name = "swiftlink-infra"
version = "0.1.0"
edition = "2021"
authors = ["feifeigood <feifeigood91@gmail.com>"]

[dependencies]
libc = "0.2.141"
cfg-if = "1"
chrono = "0.4"
enum_dispatch = "0.3.12"
thiserror = "1"
once_cell = "1.18.0"
ipnet = "2.9.0"
lru = "0.12.0"
rand = "0.8.5"
maxminddb = { version = "0.23.0", features = ["mmap"] }

# fakedns
bimap = "0.6.3"
rocksdb = "0.21.0"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "env-filter",
] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4" }

# async/await
futures = { version = "0.3.5", default-features = false, features = ["std"] }
futures-intrusive = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.28", features = [
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "sync",
    "time",
    "signal",
] }
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tracing-test = "0.2.4"
