[package]
name = "swiftlink-net"
version = "0.1.0"
edition = "2021"
authors = ["feifeigood <feifeigood91@gmail.com>"]

[dependencies]
libc = "0.2.141"
cfg-if = "1"

# async/await
tokio = { version = "1.28", features = [
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "sync",
    "time",
] }
socket2 = { version = "0.5", features = ["all"] }

# log
tracing = "0.1"
