[package]
name = "swiftlink-transport"
version = "0.0.0"
edition = "2021"
authors = ["feifeigood <feifeigood91@gmail.com>"]

[dependencies]
bytes = "1"
byteorder = "1"
thiserror = "1"

# async/await
futures = { version = "0.3.5", default-features = false, features = ["std"] }
futures-intrusive = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1.43"
tokio = { version = "1", features = [
    "time",
    "rt",
    "signal",
    "macros",
    "parking_lot",
] }

# socks and shadowsocks
shadowsocks = "1"

# swiftlink
swiftlink-infra = { path = "../swiftlink-infra" }
