[package]
name = "swiftlink"
version = "0.1.0"
edition = "2021"
authors = ["feifeigood <feifeigood91@gmail.com>"]
description = """
A rule-based tunnel written in Rust
"""

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread", "num_cpus"]

[dependencies]
anyhow = "1"
thiserror = "1"
byte-unit = { version = "4", features = [
    "serde",
    "std",
], default-features = false }
cfg-if = "1"
clap = { version = "4.1.1", features = ["derive"] }
dirs = "4.0.0"
num_cpus = { version = "1", optional = true }
toml = "0.8"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4" }

# log
tracing = "0.1"

# async/await
futures = { version = "0.3.5", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }


swiftlink-infra = { path = "../swiftlink-infra" }
swiftlink-dns = { path = "../swiftlink-dns" }


[target.'cfg(unix)'.dependencies]
fdlimit = "0.2"

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = { version = "0.5" }
