[package]
name = "swiftlink"
version = "0.1.0"
edition = "2021"
authors = ["feifeigood <feifeigood91@gmail.com>"]
description = """
A experimental tunnel written in Rust
"""

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread", "num_cpus"]

[dependencies]
anyhow = "1"
thiserror = "1"
byte-unit = { version = "4", features = [
    "serde",
    "std",
], default-features = false }
bytes = "1.5.0"
byte_string = "1.0.0"
cfg-if = "1"
clap = { version = "4.1.1", features = ["derive"] }
dirs = "5"
num_cpus = { version = "1", optional = true }
toml = "0.8"
iprange = "0.6"
ipnet = "2"
enum_dispatch = "0.3.12"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
maxminddb = { version = "0.23.0", features = ["mmap"] }
lru = "0.12.0"
lru_time_cache = "0.11.11"
sha2 = "0.10.8"
hex = "0.4.3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4" }

# log
tracing = "0.1"

# async/await
futures = { version = "0.3.5", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "net"] }
async-trait = "0.1.43"

# tls/rustls
webpki-roots = "0.26"
tokio-rustls = "0.25.0"
rustls-pemfile = "2"
rustls-native-certs = "0.7.0"

# swiftlink
swiftlink-dns = { path = "../swiftlink-dns" }
swiftlink-infra = { path = "../swiftlink-infra" }
swiftlink-transport = { path = "../swiftlink-transport" }

[target.'cfg(unix)'.dependencies]
fdlimit = "0.2"

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator = { version = "0.5" }
